# redMarriageAPI/swagger/swagger.yml
@@ -236,6 +236,121 @@ paths:
     get:
       tags:
       - timelines
+      description: get Timelines
+      operationId: TimelinesController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Timelines'
+        "403":
+          description: ""
+    post:
+      tags:
+      - timelines
+      description: create Timelines
+      operationId: TimelinesController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for Timelines content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Timelines'
+      responses:
+        "201":
+          description: '{int} models.Timelines'
+        "403":
+          description: body is empty
+  /timelines/{id}:
+    get:
+      tags:
+      - timelines
+      description: get Timelines by id
+      operationId: TimelinesController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Timelines'
+        "403":
+          description: :id is empty
+    put:
+      tags:
+      - timelines
+      description: update the Timelines
+      operationId: TimelinesController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for Timelines content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Timelines'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Timelines'
+        "403":
+          description: :id is not int
+    delete:
+      tags:
+      - timelines
+      description: delete the Timelines
+      operationId: TimelinesController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
+  /user/:
+    get:
+      tags:
+      - user
       description: get User
       operationId: UserController.Get All
       parameters:
@@ -273,7 +388,7 @@ paths:
           description: ""
     post:
       tags:
-      - timelines
+      - user
       description: create User
       operationId: UserController.Post
       parameters:
@@ -288,10 +403,10 @@ paths:
           description: '{int} models.User'
         "403":
           description: body is empty
-  /timelines/{id}:
+  /user/{id}:
     get:
       tags:
-      - timelines
+      - user
       description: get User by id
       operationId: UserController.Get One
       parameters:
@@ -309,7 +424,7 @@ paths:
           description: :id is empty
     put:
       tags:
-      - timelines
+      - user
       description: update the User
       operationId: UserController.Put
       parameters:
@@ -333,7 +448,7 @@ paths:
           description: :id is not int
     delete:
       tags:
-      - timelines
+      - user
       description: delete the User
       operationId: UserController.Delete
       parameters:
@@ -581,116 +696,21 @@ definitions:
   models.Account:
     title: Account
     type: object
-    properties:
-      ID:
-        type: integer
-        format: int64
-      isactive:
-        type: boolean
-      users:
-        type: array
-        items:
-          $ref: '#/definitions/models.User'
-      wedingprocess:
-        $ref: '#/definitions/models.WeddingProcess'
   models.Step:
     title: Step
     type: object
-    properties:
-      description:
-        type: string
-      id:
-        type: integer
-        format: int64
-      isactive:
-        type: boolean
-      priorityorder:
-        type: integer
-        format: int32
-      timelines:
-        type: array
-        items:
-          $ref: '#/definitions/models.Timelines'
-      wedding:
-        $ref: '#/definitions/models.Wedding'
   models.Timelines:
     title: Timelines
     type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-      isactive:
-        type: boolean
-      step:
-        $ref: '#/definitions/models.Step'
-      weddingprocess:
-        $ref: '#/definitions/models.WeddingProcess'
   models.User:
     title: User
     type: object
-    properties:
-      account:
-        $ref: '#/definitions/models.Account'
-      address:
-        type: string
-      cellphone:
-        type: string
-      cpf:
-        type: string
-      email:
-        type: string
-      id:
-        type: integer
-        format: int64
-      isactive:
-        type: boolean
-      name:
-        type: string
-      password:
-        type: string
-      phone:
-        type: string
-      rg:
-        type: string
-      surname:
-        type: string
   models.Wedding:
     title: Wedding
     type: object
-    properties:
-      description:
-        type: string
-      id:
-        type: integer
-        format: int64
-      isactive:
-        type: boolean
-      steps:
-        type: array
-        items:
-          $ref: '#/definitions/models.Step'
-      style:
-        type: string
-      weddingprocess:
-        $ref: '#/definitions/models.WeddingProcess'
   models.WeddingProcess:
     title: WeddingProcess
     type: object
-    properties:
-      account:
-        $ref: '#/definitions/models.Account'
-      id:
-        type: integer
-        format: int64
-      isactive:
-        type: boolean
-      timelines:
-        type: array
-        items:
-          $ref: '#/definitions/models.Timelines'
-      wedding:
-        $ref: '#/definitions/models.Wedding'
 tags:
 - name: account
   description: |2
@@ -699,6 +719,9 @@ tags:
   description: |2
      StepController operations for Step
 - name: timelines
+  description: |2
+     TimelinesController operations for Timelines
+- name: user
   description: |2
      UserController operations for User
 - name: wedding
